Listener Events for API

--- a/work/src/main/AndroidManifest.xml
+++ b/work/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
     package="com.google.ar.core.codelab.cloudanchor">
 
   <uses-permission android:name="android.permission.CAMERA"/>
+  ///////////////////////////BUNZ
+  <uses-permission android:name="android.permission.INTERNET"/>
   <!-- This tag indicates that this application requires ARCore.  This results in the application
        only being visible in the Google Play Store on devices that support ARCore. -->
   <uses-feature android:name="android.hardware.camera.ar" android:required="true"/>
@@ -48,5 +50,10 @@
          Application code must still call ArCoreApk.requestInstall() before beginning an ARCore
          sessions, in case the user uninstalls ARCore for any reason. -->
     <meta-data android:name="com.google.ar.core" android:value="required" />
+
+    //////////////Bunz
+    <meta-data
+        android:name="com.google.android.ar.API_KEY"
+        android:value="AIzaSyARXkY4JAm5ECh85_Epd4zFKkx9jQ1frRc"/>
   </application>
 </manifest>
