--- a/work/src/main/AndroidManifest.xml
+++ b/work/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
       tools:ignore="GoogleAppIndexingWarning">
 
     <activity
-        android:name=".MainActivity"
+        android:name=".Login"
         android:label="@string/app_name"
         android:configChanges="orientation|screenSize"
         android:exported="true"
@@ -44,6 +44,14 @@
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
+    </activity>
+    <activity
+        android:name=".MainActivity"
+        android:label="@string/app_name"
+        android:configChanges="orientation|screenSize"
+        android:exported="true"
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:screenOrientation="locked">
     </activity>
     <!-- This tag indicates that this application requires ARCore.  This results in the Google Play
          Store downloading and installing ARCore along with the application.
